--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,3 +1,29 @@
-<h6>Dashboard</h6>
-<h3>Welcome {{name}}</h3>
-<p>Content here</p>
+<h4 class="center">Welcome {{name}} to your Dashboard</h6>
+
+{{#if content}}
+  <table class="striped">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Date</th>
+        <th>Status</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each content}}
+        <tr>
+          <td>
+            <a href="/content/{{_id}}">{{title}}</a>
+          </td>
+          <td>{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}</td>
+          <td><span class="dash-status">{{status}}</span></td>
+          <td></td>
+        </tr>
+      {{/each}}
+    </tbody>
+  </table>
+
+{{else}}
+  <p class="center">You have not posted anything</p>
+{{/if}}
