--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       {{> _header}}
+      {{> _add_btn}}
         {{{body}}}
     </div>
 
@@ -17,6 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
       M.Sidenav.init(document.querySelector('.sidenav'));
+      M.FormSelect.init(document.querySelector('#status'))
     </script>
   </body>
 </html>
