--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,4 +1,4 @@
-<nav class="grey darken-3">
+<nav id="navBar" class="grey darken-3">
   <div class="nav-wrapper container">
 
     <a href="#" class="brand-logo center">App Title Here</a>
@@ -7,7 +7,7 @@
       <i class="fas fa-bars"></i>
     </a>
     <ul class="sidenav" id="mobile-demo">
-      <li><a href="/frontPage">Front Page</a></li>
+      <li><a href="/content">Front Page</a></li>
       <li><a href="/dashboard">Dashboard</a></li>
       <li><a href="/auth/logout">Logout</a></li>
     </ul>
