--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,12 @@
   text-align: center;
 }
 
+.container{
+  width: 100%;
+  max-width: none;
+  margin: none;
+}
+
 p{
   margin: 10px 0;
 }
@@ -12,15 +18,33 @@ p{
   margin-right: 10px;
 }
 
-.fa-bars{
-  margin-left: 6em;
+.card-image .fa-small{
+  font-size: 16px;
 }
 
-.container{
-  max-width: 100%;
-  width: inherit;
+.btn-float{
+  float: left;
+  margin-right: 10px;
 }
 
-body > .container{
-  padding: 1em;
+.img-small{
+  width: 4rem;
+}
+
+#bodyWrapper{
+  width: 100%;
+}
+
+#navBar{
+  display: flex;
+  width: 100%;
+}
+
+#navBar > div{
+  max-width: 1280px;
+}
+
+#Wrapper{
+  max-width: 1280px;
+  margin: 0 auto;
 }
