--- a/views/content/index.hbs
+++ b/views/content/index.hbs
@@ -1,26 +1,29 @@
-<h1>content</h1>
-<div class="row">
-  {{#each content}}
-    <div class="col s12 m4">
-      <div class="card">
-        <div class="card-image">
-          <!-- {{ !-- todo: edit icon -- }} -->
-        </div>
-        <div class="card-content center-align">
-          <h5>{{title}}</h5>
-          <p>{{body}}</p>
-          <br>
-          <div class="chip">
-            <img src="{{user.image}}" alt="">
-            <a href="/content/user/{{user._id}}">{{user.displayName}}</a>
+
+<section id="Wrapper">
+  <h2>Content</h2>
+  <div class="row">
+    {{#each content}}
+      <div class="col s12 m4">
+        <div class="card">
+          <div class="card-image">
+            {{{editIcon user ../user _id}}}
+          </div>
+          <div class="card-content center-align">
+            <h5>{{title}}</h5>
+            <p>{{stripTags (truncate body 150)}}</p>
+            <br>
+            <div class="chip">
+              <img src="{{user.image}}" alt="">
+              <a href="/content/user/{{user._id}}">{{user.displayName}}</a>
+            </div>
+          </div>
+          <div class="card-action center-align">
+            <a href="/content/{{_id}}" class="btn grey">Read More</a>
           </div>
         </div>
-        <div class="card-action center-align">
-          <a href="/content/{{_id}}" class="btn grey">Read More</a>
-        </div>
       </div>
-    </div>
-  {{else}}
-    <p>No content to Display</p>
-  {{/each}}
-</div>
+    {{else}}
+      <p>No content to Display</p>
+    {{/each}}
+  </div>
+</section>
