--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,7 +8,7 @@
     <title></title>
   </head>
   <body>
-    <div class="container">
+    <div id="bodyWrapper" class="container">
       {{> _header}}
       {{> _add_btn}}
         {{{body}}}
