--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
 <h1><i class="fa-solid fa-font-awesome"></i></h1>
 <div class="section">
-  <p class="lead">Mission Statement or other headline here!</p>
+  <p class="lead">Put your tasks behind you!</p>
 </div>
 <div class="divider"></div>
 <div class="section">
