fixed CKEDITOR bug

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -21,7 +21,7 @@
       M.Sidenav.init(document.querySelector('.sidenav'));
       M.FormSelect.init(document.querySelector('#status'));
 
-      CKEDITOR.replace('body', {
+      CKEDITOR.replace('contentBody', {
         plugins: 'wysiwygarea, toolbar, basicstyles, link'
       })
     </script>
