--- a/views/content/edit.hbs
+++ b/views/content/edit.hbs
@@ -25,7 +25,7 @@
       <div class="row">
         <div class="input-field">
           <h5>Changes?</h5>
-          <textarea name="body" id="body">{{content.body}}</textarea>
+          <textarea name="body" id="contentBody">{{content.body}}</textarea>
         </div>
       </div>
 
