--- a/views/content/edit.hbs
+++ b/views/content/edit.hbs
@@ -38,3 +38,9 @@
   </div>
 
 </section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.19.1/ckeditor.js" integrity="sha512-Ooi9IbjM2SIDjQ02ENbPFuuORT8F8Rc+rowcYfLneDwKRxw1+gVVj5tciVmV/APnA/Ys+qy1MbNKK3k2EaAHcw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="text/javascript">
+CKEDITOR.replace('contentBody', {
+  plugins: 'wysiwygarea, toolbar, basicstyles, link'
+})
+</script>
