--- a/views/content/add.hbs
+++ b/views/content/add.hbs
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="input-field">
           <h5>What content are you adding?</h5>
-          <textarea name="body" id="body"></textarea>
+          <textarea name="body" id="contentBody"></textarea>
         </div>
       </div>
 
@@ -35,3 +35,9 @@
     </form>
   </div>
 </section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.19.1/ckeditor.js" integrity="sha512-Ooi9IbjM2SIDjQ02ENbPFuuORT8F8Rc+rowcYfLneDwKRxw1+gVVj5tciVmV/APnA/Ys+qy1MbNKK3k2EaAHcw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="text/javascript">
+CKEDITOR.replace('contentBody', {
+  plugins: 'wysiwygarea, toolbar, basicstyles, link'
+})
+</script>
